Bug 116848 - opening OTT blocks writer
Summary: opening OTT blocks writer
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.0.3.2 release
Hardware: All Windows (All)
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:6.1.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2018-04-06 13:33 UTC by DanielLanz
Modified: 2018-04-18 15:36 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Corrupt Template (defekte Vorlage) (167.17 KB, application/vnd.oasis.opendocument.text-template)
2018-04-06 13:33 UTC, DanielLanz
Details

Note You need to log in before you can comment on or make changes to this bug.
Description DanielLanz 2018-04-06 13:33:12 UTC
Created attachment 141168 [details]
Corrupt Template (defekte Vorlage)

I've created and edited a template (using LO-Writer 6.02
After the final close I wanted use the template. But
 - the template can't be used
 - the template can't be edited anymore
 - LO hangs ("not responding")
My probably last changes
 - I declared Header and Footer as write-proteced ares.
Attachement: corrupt Template

Ich habe eine Vorlage im Writer (6.02) erstellt und bearbeitet. Nach der letzten Bearbeitung wollte ich die Vorlage nutzen. Aber - Die Vorlage lässt sich nicht verwenden - Die Vorlage lässt sich nicht mehr editieren - LibreOffice (auch V6.03.2) hängt sich auf. Meine (vermutlich) letzte Änderung Auf Kopf- und Fuss-zeilen je einen Bereich legen, der nicht änderbar sein soll.
Beilage : defekte Vorlage
Comment 1 Telesto 2018-04-06 16:08:30 UTC
Repro with
Version: 6.1.0.0.alpha0+
Build ID: d39a8e791618a40328c0f90bece3cc246dcf57f7
CPU threads: 4; OS: Windows 6.3; UI render: GL; 
TinderBox: Win-x86@42, Branch:master, Time: 2018-04-05_23:46:48
Locale: nl-NL (nl_NL); Calc: CL

No repro - opening fine - with 
Versie: 4.4.7.2 
Build ID: f3153a8b245191196a4b6b9abd1d0da16eead600
Locale: nl_NL
Comment 2 Telesto 2018-04-06 16:09:56 UTC
No repro with
Version: 5.4.1.0.0+
Build ID: f200d5700782ae179fd96b6ad4b0fe8e7edd1616
CPU threads: 4; OS: Windows 6.29; UI render: default; 
Locale: nl-NL (nl_NL); Calc: CL
Comment 3 Aron Budea 2018-04-07 04:01:02 UTC
Bibisected to the commit referenced below using repo bibisect-win32-6.0. Adding Cc: to Miklos Vajna, please take a look sometimes.

https://cgit.freedesktop.org/libreoffice/core/commit/?id=6ade80cf142664e78954c7544534e9436ceb90c7
author		Miklos Vajna <vmiklos@collabora.co.uk>	2017-06-16 08:35:05 +0200
committer	Miklos Vajna <vmiklos@collabora.co.uk>	2017-06-16 12:58:38 +0200

tdf#108524 sw: allow move of frame inside section without columns
Comment 4 Commit Notification 2018-04-17 07:07:16 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e4b335fac90a2128a5df3641050d6382883de1e8

tdf#116848 sw, sections in tables: no split in headers or footers

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Xisco Faulí 2018-04-18 15:36:06 UTC
Verified in

Version: 6.1.0.0.alpha0+
Build ID: b07e8a7e16ba69e822a309ec280d1987f90021a3
CPU threads: 4; OS: Linux 4.13; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group

Miklos, thanks for fixing this!!