tdf#116848 sw, sections in tables: no split in headers or footers

The motivation for split section-in-tables was multiple pages, so
disabling it for headers/footers is not a problem, and fixes the layout
loop.

Change-Id: I3e13690f6e6b50c35417f8a4f7886fd0befe7962